# overhead-object-detection

./: README.md  pyproject.toml
configs/models/: conditional_detr.yaml  convnextv2.yaml  deformable_detr.yaml  detr.yaml  mask2former.yaml  pvtv2.yaml  swin_transformer_v2.yaml  vitdet.yaml  yolos.yaml
configs/monitoring/: prometheus.yml
configs/monitoring/grafana/: model_training_dashboard.json
data/validation/: geojson_validator.py  quality_checks.py  schema_validation.py
dependencies/: requirements.txt
models/foundation/: foundation_model.py
scripts/: clean_data.py  deploy_model.py  evaluate_model.py  export_model.py  generate_reports.py  inference.py  monitor_model.py  optimize_hparams.py  preprocess_data.py  setup_environment.py  train_model.py
src/data/: augmentation.py  dataloader.py  dataset_factory.py
src/evaluation/: evaluator.py  metrics.py
src/models/: foundation_model.py  model_builder.py  model_factory.py  model_registry.py  peft_finetune.py
src/models/zoo/: base_model.py  conditional_detr.py  convnextv2.py  deformable_detr.py  detr.py  mask2former.py  pvtv2.py  swin_transformer_v2.py  vitdet.py  yolos.py
src/training/: loss_functions.py  optimizers.py  peft_finetune.py  trainer.py
src/utils/: config_parser.py  file_utils.py  logging.py  logging_utils.py  metrics.py  system_utils.py
tests/: test_models.py
tests/unit/scripts/: test_clean_data.py  test_deploy_model.py  test_evaluate_model.py  test_export_model.py  test_generate_reports.py  test_inference.py  test_monitor_model.py  test_optimize_hparams.py  test_preprocess_data.py  (+2 more)
(+18 files in other folders)
